--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
+
+<div class="header"> 
         
-    </header>
+</div>
     
 </body>
 </html>
