--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<div class="header"> 
-        
-</div>
-    
+    <div class="red"></div>
+    <div class="mid-red"></div>
+    <div class="dark-red"></div>
 </body>
 </html>
