--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <div class="red"></div>
     <div class="mid-red"></div>
     <div class="dark-red"></div>
+    <div class="mid-purple"></div>
+    <div class="purple"></div>
+    <div class="dakr-purple"></div>
+    <a>
+        <img src="" alt="">
+    </a>
 </body>
 </html>
