still_working_on_grid

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="dark-red"></div>
     <div class="mid-purple"></div>
     <div class="purple"></div>
-    <div class="dakr-purple"></div>
+    <div class="dark-purple"></div>
     <a>
         <img src="" alt="">
     </a>
