--- a/index.html
+++ b/index.html
@@ -8,14 +8,30 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="red"></div>
+    <div class="red">
+        <div class= "pictures">
+            <img src="Sword.png" alt="" width="20" >
+        </div>
+        <div class= "pictures_2">
+            <img src="tools.png" alt="" width="20">
+        </div>
+        <div class ="pictures_3">
+            <img src="armor.png" alt="" width="25">
+        </div>
+        <div class="pictures_4">
+            <img src="bar.png" alt="" width="24">
+        </div>
+    </div>
+
+
+
+
+
     <div class="mid-red"></div>
     <div class="dark-red"></div>
     <div class="mid-purple"></div>
     <div class="purple"></div>
     <div class="dark-purple"></div>
-    <a>
-        <img src="" alt="">
-    </a>
+    
 </body>
 </html>
