--- a/index.html
+++ b/index.html
@@ -11,26 +11,61 @@
     <div class="red">
         <div class= "pictures">
             <img src="Sword.png" alt="" width="20" >
+            <a href="">Swords</a>
         </div>
         <div class= "pictures_2">
             <img src="tools.png" alt="" width="20">
+            <a href="">Tools</a>
         </div>
         <div class ="pictures_3">
             <img src="armor.png" alt="" width="25">
+            <a href="">Armor</a>
         </div>
         <div class="pictures_4">
             <img src="bar.png" alt="" width="24">
+            <a href="">Bars</a>
+        </div>
+        <div class="pictures_5">
+            <img src="Acc.png" alt="" width="25">
+            <a href="">Acc</a>
+        </div>
+        <div class="pictures_6">
+           <img src="block.png" alt=""  width="18"> 
+           <a href="">Blocks</a>
+        </div>
+        <div class="pictures_7">
+            <img src="Potions.png" alt=""  width="19">
+            <a href="">Potions</a>
+        </div>
+        <div class= "pictures_8">
+            <img src="Mount.png" alt=""  width="25">
+            <a href="">Mounts</a>
+        </div>
+    </div>
+
+    <div class="mid-red">
+        <header>
+            <h1>
+                Basic terraria wiki
+            </h1>
+        </header>
+    </div>
+
+    <div class="dark-red">
+        <div class="gif_1">
+            <img src="ronald-van-egdom-crimson720.gif" height="220" width="490">
         </div>
     </div>
 
 
-
-
-
-    <div class="mid-red"></div>
-    <div class="dark-red"></div>
     <div class="mid-purple"></div>
-    <div class="purple"></div>
+
+    <div class="purple">
+        <Div class="gif_2">
+            <img src="ronald-van-egdom-corruption720p.gif" height="220" width="490">
+        </Div>
+    </div>
+
     <div class="dark-purple"></div>
     
 </body>
