Snart_klar_med_första_del_sidan

--- a/index.html
+++ b/index.html
@@ -58,7 +58,42 @@
     </div>
 
 
-    <div class="mid-purple"></div>
+    <div class="mid-purple">
+        <div class="pictures_9">
+            <img src="Map_Icon_King_Slime.png" alt="" width="">
+            <a href="">King Slime</a>
+        </div>
+
+        <div class="pictures_10">
+            <img src="Cthulhu.png" alt="" width="">
+            <a href="">Eye of Cthulhu</a>
+        </div>
+
+        <div class="pictures_11">
+            <img src="eater.png" alt="" width="">
+            <a href="">Eater of Worlds</a>
+        </div>
+
+        <div class="pictures_12">
+            <img src="Brain.png" alt="" width="">
+            <a href="">Brain of Cthulhu</a>
+        </div>
+
+        <div class="pictures_13">
+            <img src="Queen.png">
+            <a href="">Queen Bee</a>
+        </div>
+
+        <div class="pictures_14">
+            <img src="Skeletron.png">
+            <a href="">Skeletron</a>
+        </div>
+
+        <div class="pictures_15">
+            <img src="Wall_of_flesh.png">
+            <a href="">Wall of Flesh</a>
+        </div>
+    </div>
 
     <div class="purple">
         <Div class="gif_2">
@@ -66,7 +101,20 @@
         </Div>
     </div>
 
-    <div class="dark-purple"></div>
+    <div class="dark-purple">
+        <h1>
+            <a href="https://terraria.fandom.com/wiki/Terraria_Wiki">The official terraria wiki</a>
+        </h1>
+
+        <h3>
+            How to contact me:  
+        </h3>
+
+        <h3>
+            Snapchat: sbirdy420 and Discord: BirdY #6969
+        </h3>
+
+    </div>
     
 </body>
 </html>
