--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="red">
         <div class= "pictures">
             <img src="Sword.png" alt="" width="20" >
-            <a href="">Swords</a>
+            <a href="Side_2.html">Swords</a>
         </div>
         <div class= "pictures_2">
             <img src="tools.png" alt="" width="20">
@@ -57,7 +57,6 @@
         </div>
     </div>
 
-
     <div class="mid-purple">
         <div class="pictures_9">
             <img src="Map_Icon_King_Slime.png" alt="" width="">
@@ -96,9 +95,9 @@
     </div>
 
     <div class="purple">
-        <Div class="gif_2">
+        <div class="gif_2">
             <img src="ronald-van-egdom-corruption720p.gif" height="220" width="490">
-        </Div>
+        </div>
     </div>
 
     <div class="dark-purple">
@@ -116,5 +115,10 @@
 
     </div>
     
+    <div class="body">
+        <div class="pictures_16">
+            <img src="" height="" width="">
+        </div>
+    </div>
 </body>
 </html>
