adding_more_pic

--- a/Side_2.html
+++ b/Side_2.html
@@ -15,7 +15,46 @@
     </header>
     <div class ="Container_1">
         <div class ="Block_1">
-            
+            <div class ="pictures_17">
+                <img src="Slide_2_items/Copper_Shortsword.png" alt="" width="">
+                <a href="">Copper Shortsword</a>
+            </div>
+
+            <div class ="pictures_18">
+                <img src="Slide_2_items/Platinum_Broadsword.png" alt="" width="">
+                <a href="">Platinum Broadsword</a>
+            </div>
+
+            <div class ="pictures_19">
+                <img src="Slide_2_items/Blade_of_Grass.png" alt="" width="">
+                <a href="">Blad of grass</a>
+            </div>
+
+            <div class ="pictures_20">
+                <img src ="Slide_2_items/Blood_Butcherer.png" alt="" width="">
+                <a href="">Blood Butcherer</a>
+            </div>
+
+            <div class ="pictures_21">
+                <img src="Slide_2_items/Muramasa.png" alt="" width="">
+                <a href="">Muramasa</a> 
+            </div>
+
+            <div class ="pictures_22">
+                <img src ="Slide_2_items/Fiery_Greatsword.png" alt="" width="">
+                <a href="">Fiery Fiery Greatsword</a>
+            </div>
+
+            <div class ="pictures_23">
+                <img src ="Slide_2_items/Night%27s_Edge.png" alt="" width="">
+                <a href="">Nights edge</a>
+            </div>
+
+            <div class ="pictures_24">
+                <img src ="Slide_2_items/Excalibur.png" alt=""  width="">
+                
+
+            </div>
         </div>
         <div class ="Block_2">
 
