--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
 <body>
     <div class="red">
         <div class= "pictures">
-            <img src="Sword.png" alt="" width="20" >
+            <img src="Home_Slide_pic/Sword.png" alt="" width="20" >
             <a href="Side_2.html">Swords</a>
         </div>
         <div class= "pictures_2">
-            <img src="tools.png" alt="" width="20">
+            <img src="Home_Slide_pic/tools.png" alt="" width="20">
             <a href="">Tools</a>
         </div>
         <div class ="pictures_3">
-            <img src="armor.png" alt="" width="25">
+            <img src="Home_Slide_pic/armor.png" alt="" width="25">
             <a href="">Armor</a>
         </div>
         <div class="pictures_4">
-            <img src="bar.png" alt="" width="24">
+            <img src="Home_Slide_pic/bar.png" alt="" width="24">
             <a href="">Bars</a>
         </div>
         <div class="pictures_5">
-            <img src="Acc.png" alt="" width="25">
+            <img src="Home_Slide_pic/Acc.png" alt="" width="25">
             <a href="">Acc</a>
         </div>
         <div class="pictures_6">
-           <img src="block.png" alt=""  width="18"> 
+           <img src="Home_Slide_pic/block.png" alt=""  width="18"> 
            <a href="">Blocks</a>
         </div>
         <div class="pictures_7">
-            <img src="Potions.png" alt=""  width="19">
+            <img src="Home_Slide_pic/Potions.png" alt=""  width="19">
             <a href="">Potions</a>
         </div>
         <div class= "pictures_8">
-            <img src="Mount.png" alt=""  width="25">
+            <img src="Home_Slide_pic/Mount.png" alt=""  width="25">
             <a href="">Mounts</a>
         </div>
     </div>
@@ -59,37 +59,37 @@
 
     <div class="mid-purple">
         <div class="pictures_9">
-            <img src="Map_Icon_King_Slime.png" alt="" width="">
+            <img src="Home_Slide_Boss_pic/Map_Icon_King_Slime.png" alt="" width="">
             <a href="">King Slime</a>
         </div>
 
         <div class="pictures_10">
-            <img src="Cthulhu.png" alt="" width="">
+            <img src="Home_Slide_Boss_pic/Cthulhu.png" alt="" width="">
             <a href="">Eye of Cthulhu</a>
         </div>
 
         <div class="pictures_11">
-            <img src="eater.png" alt="" width="">
+            <img src="Home_Slide_Boss_pic/eater.png" alt="" width="">
             <a href="">Eater of Worlds</a>
         </div>
 
         <div class="pictures_12">
-            <img src="Brain.png" alt="" width="">
+            <img src="Home_Slide_Boss_pic/Brain.png" alt="" width="">
             <a href="">Brain of Cthulhu</a>
         </div>
 
         <div class="pictures_13">
-            <img src="Queen.png">
+            <img src="Home_Slide_Boss_pic/Queen.png">
             <a href="">Queen Bee</a>
         </div>
 
         <div class="pictures_14">
-            <img src="Skeletron.png">
+            <img src="Home_Slide_Boss_pic/Skeletron.png">
             <a href="">Skeletron</a>
         </div>
 
         <div class="pictures_15">
-            <img src="Wall_of_flesh.png">
+            <img src="Home_Slide_Boss_pic/Wall_of_flesh.png">
             <a href="">Wall of Flesh</a>
         </div>
     </div>
