--- a/Side_2.html
+++ b/Side_2.html
@@ -16,42 +16,43 @@
     <div class ="Container_1">
         <div class ="Block_1">
             <div class ="pictures_17">
-                <img src="Slide_2_items/Copper_Shortsword.png" alt="" width="">
-                <a href="">Copper Shortsword</a>
+                <img src="Slide_2_Weapons/Copper_Shortsword.png" alt="" width="">
+                <a href="">Copper Shortsword</a> 
+                
             </div>
 
             <div class ="pictures_24">
-                <img src ="Slide_2_items/Iron_Broadsword.png" alt=""  width="">
+                <img src ="Slide_2_Weapons/Iron_Broadsword.png" alt=""  width="">
                 <a href="">Iron Broadsword</a>
             </div>
 
             <div class ="pictures_18">
-                <img src="Slide_2_items/Platinum_Broadsword.png" alt="" width="">
+                <img src="Slide_2_Weapons/Platinum_Broadsword.png" alt="" width="">
                 <a href="">Platinum Broadsword</a>
             </div>
 
             <div class ="pictures_19">
-                <img src="Slide_2_items/Blade_of_Grass.png" alt="" width="">
+                <img src="Slide_2_Weapons/Blade_of_Grass.png" alt="" width="">
                 <a href="">Blad of grass</a>
             </div>
 
             <div class ="pictures_20">
-                <img src ="Slide_2_items/Blood_Butcherer.png" alt="" width="">
+                <img src ="Slide_2_Weapons/Blood_Butcherer.png" alt="" width="">
                 <a href="">Blood Butcherer</a>
             </div>
 
             <div class ="pictures_21">
-                <img src="Slide_2_items/Muramasa.png" alt="" width="">
+                <img src="Slide_2_Weapons/Muramasa.png" alt="" width="">
                 <a href="">Muramasa</a> 
             </div>
 
             <div class ="pictures_22">
-                <img src ="Slide_2_items/Fiery_Greatsword.png" alt="" width="">
+                <img src ="Slide_2_Weapons/Fiery_Greatsword.png" alt="" width="">
                 <a href="">Fiery Fiery Greatsword</a>
             </div>
 
             <div class ="pictures_23">
-                <img src ="Slide_2_items/Nights_Edge.png" alt="" width="">
+                <img src ="Slide_2_Weapons/Nights_Edge.png" alt="" width="">
                 <a href="">Nights edge</a>
             </div>
 
@@ -68,42 +69,42 @@
         </div>
         <div class ="Block_3">
             <div class ="pictures_25">
-                <img src="Slide_2_items/Excalibur.png" alt="" width="">
+                <img src="Slide_2_Weapons/Excalibur.png" alt="" width="">
                 <a href="">Excalibur</a>
             </div>
 
             <div class ="pictures_26">
-                <img src="Slide_2_items/True_Nights_Edge.png" alt="" width="">
+                <img src="Slide_2_Weapons/True_Nights_Edge.png" alt="" width="">
                 <a href="">True Nights Edge</a>
             </div>
 
             <div class ="pictures_27">
-                <img src="Slide_2_items/True_Excalibur.png" alt="" width="">
+                <img src="Slide_2_Weapons/True_Excalibur.png" alt="" width="">
                 <a href="">True Excalibur</a>
             </div>
 
             <div class ="pictures_28">
-                <img src="Slide_2_items/Terra_Blade.png" alt="" width="">
+                <img src="Slide_2_Weapons/Terra_Blade.png" alt="" width="">
                 <a href="">Terra Blade</a>
             </div>
 
             <div class ="pictures_29">
-                <img src="Slide_2_items/Influx_Waver.png" alt="" width="">
+                <img src="Slide_2_Weapons/Influx_Waver.png" alt="" width="">
                 <a href="">Influx Waver</a>
             </div>
 
             <div class ="pictures_30">
-                <img src="Slide_2_items/Meowmere.png" alt="" width="">
+                <img src="Slide_2_Weapons/Meowmere.png" alt="" width="">
                 <a href="">Meowmere</a>
             </div>
 
             <div class ="pictures_31">
-                <img src="Slide_2_items/Star_Wrath.png" alt="" width="">
+                <img src="Slide_2_Weapons/Star_Wrath.png" alt="" width="">
                 <a href="">Star Wrath</a>
             </div>
 
             <div class ="pictures_32">
-                <img src="Slide_2_items/Zenith.png" alt="" width="">
+                <img src="Slide_2_Weapons/Zenith.png" alt="" width="">
                 <a href="">Zenith</a>
             </div>
         </div>
