--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class= "pictures_2">
             <img src="Home_Slide_pic/tools.png" alt="" width="20">
-            <a href="">Tools</a>
+            <a href="Side_2_2.html">Tools</a>
         </div>
         <div class ="pictures_3">
             <img src="Home_Slide_pic/armor.png" alt="" width="25">
